--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js">
-    </script>
+    <script src="http://code.jquery.com/jquery-3.1.1.min.js"></script>
     
 
     <title>Document</title>
